--- a/services.html
+++ b/services.html
@@ -2,41 +2,28 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Electrical Services in Akron OH | Fast Current Electric LLC</title>
-  <meta name="description" content="Residential electrical services including troubleshooting, lighting installation, outlet replacement, and safety inspections in Akron OH, Wooster OH, Canton OH, Massillon OH, and surrounding areas.">
+  <title>Services | Fast Current Electric LLC</title>
+  <meta name="description" content="Fast Current Electric LLC provides outlet replacement, lighting installation, electrical troubleshooting, and safety inspections in Akron, OH and nearby areas.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" href="images/favicon.png" type="image/png">
 
   <style>
     body { font-family: Arial, sans-serif; margin: 0; color: #222; }
-    .site-header { display: flex; align-items: center; gap: 1.5rem; background-image: url('images/background.png'); background-size: cover; background-position: center; color: #fff; padding: 1.5rem 2rem; }
+    .site-header { display: flex; align-items: center; gap: 1.5rem; background-image: url('images/background.png'); background-size: cover; background-position: center; color: white; padding: 1.5rem 2rem; }
     .logo { max-height: 160px; width: auto; }
-    .site-header h1 { 
-      text-shadow: 
-         3px 3px 0 #000, -3px 3px 0 #000, 
-         3px -3px 0 #000, -3px -3px 0 #000,
-         3px 0 0 #000, 0 3px 0 #000,
-        -3px 0 0 #000, 0 -3px 0 #000;
-    }
-    section h2 { 
-      text-shadow: 
-         2px 2px 0 #000, -2px 2px 0 #000, 
-         2px -2px 0 #000, -2px -2px 0 #000,
-         2px 0 0 #000, 0 2px 0 #000,
-        -2px 0 0 #000, 0 -2px 0 #000;
-      color: #0b3c5d; 
-    }
+    .site-header h1 { -webkit-text-stroke: 2px black; color: white; font-weight: bold; }
+    section h2 { -webkit-text-stroke: 1.5px black; color: white; font-weight: bold; }
     nav { background: #062a40; padding: 0.75rem; text-align: center; }
     nav a { color: #fff; margin: 0 1rem; text-decoration: none; font-weight: bold; }
     nav a:hover { text-decoration: underline; }
     nav a.active { text-decoration: underline; color: #FFD700; }
-    section { padding: 2rem; max-width: 900px; margin: auto; }
-    ul { line-height: 1.8; }
+    section { padding: 2rem; max-width: 900px; margin: auto; line-height: 1.6; }
+    .card { border: 1px solid #ddd; padding: 1rem; border-radius: 5px; background: rgba(255,255,255,0.9); margin-bottom: 1rem; }
     footer { background: #f4f4f4; text-align: center; padding: 1rem; font-size: 0.9rem; }
     @media (max-width: 600px) { .site-header { flex-direction: column; text-align: center; } }
-    a.contact-link { color: #222; text-decoration: none; font-weight: bold; }
-    a.contact-link:hover { text-decoration: underline; }
+    .contact-link { color: white; -webkit-text-stroke: 1px black; text-decoration: none; font-weight: bold; }
+    .contact-link:hover { text-decoration: underline; }
   </style>
 </head>
 
@@ -59,13 +46,11 @@
 </nav>
 
 <section>
-  <h2>What We Offer</h2>
-  <ul>
-    <li>Outlet and Switch Replacement</li>
-    <li>Lighting and Ceiling Fan Installation</li>
-    <li>Electrical Troubleshooting</li>
-    <li>Panel and Safety Inspections</li>
-  </ul>
+  <h2>Services We Provide</h2>
+  <div class="card"><strong>Outlet & Switch Replacement:</strong> Repair or replace outlets and switches safely and efficiently.</div>
+  <div class="card"><strong>Lighting & Ceiling Fans:</strong> Install, repair, and upgrade lighting and ceiling fans.</div>
+  <div class="card"><strong>Electrical Troubleshooting:</strong> Identify and fix electrical issues in your home.</div>
+  <div class="card"><strong>Panel & Safety Inspections:</strong> Ensure your electrical panel is up to code and safe.</div>
 </section>
 
 <footer>
