--- a/tips.html
+++ b/tips.html
@@ -2,40 +2,29 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Electrical Safety Tips for Homeowners | Fast Current Electric LLC</title>
-  <meta name="description" content="Electrical safety tips for homeowners in Akron OH and surrounding Northeast Ohio communities, provided by Fast Current Electric LLC.">
+  <title>DIY Electrical Safety Tips | Fast Current Electric LLC</title>
+  <meta name="description" content="DIY electrical safety tips from Fast Current Electric LLC for Akron, OH and surrounding areas. Learn when it’s safe to handle electrical tasks yourself.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" href="images/favicon.png" type="image/png">
 
   <style>
     body { font-family: Arial, sans-serif; margin: 0; color: #222; }
-    .site-header { display: flex; align-items: center; gap: 1.5rem; background-image: url('images/background.png'); background-size: cover; background-position: center; color: #fff; padding: 1.5rem 2rem; }
+    .site-header { display: flex; align-items: center; gap: 1.5rem; background-image: url('images/background.png'); background-size: cover; background-position: center; color: white; padding: 1.5rem 2rem; }
     .logo { max-height: 160px; width: auto; }
-    .site-header h1 { 
-      text-shadow: 
-         3px 3px 0 #000, -3px 3px 0 #000, 
-         3px -3px 0 #000, -3px -3px 0 #000,
-         3px 0 0 #000, 0 3px 0 #000,
-        -3px 0 0 #000, 0 -3px 0 #000;
-    }
-    section h2 { 
-      text-shadow: 
-         2px 2px 0 #000, -2px 2px 0 #000, 
-         2px -2px 0 #000, -2px -2px 0 #000,
-         2px 0 0 #000, 0 2px 0 #000,
-        -2px 0 0 #000, 0 -2px 0 #000;
-      color: #0b3c5d; 
-    }
+    .site-header h1 { -webkit-text-stroke: 2px black; color: white; font-weight: bold; }
+    section h2 { -webkit-text-stroke: 1.5px black; color: white; font-weight: bold; }
     nav { background: #062a40; padding: 0.75rem; text-align: center; }
     nav a { color: #fff; margin: 0 1rem; text-decoration: none; font-weight: bold; }
     nav a:hover { text-decoration: underline; }
     nav a.active { text-decoration: underline; color: #FFD700; }
-    section { padding: 2rem; max-width: 900px; margin: auto; line-height: 1.8; }
+    section { padding: 2rem; max-width: 900px; margin: auto; line-height: 1.6; }
+    .tips { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 1rem; }
+    .card { border: 1px solid #ddd; padding: 1rem; border-radius: 5px; background: rgba(255,255,255,0.9); }
     footer { background: #f4f4f4; text-align: center; padding: 1rem; font-size: 0.9rem; }
     @media (max-width: 600px) { .site-header { flex-direction: column; text-align: center; } }
-    a.contact-link { color: #222; text-decoration: none; font-weight: bold; }
-    a.contact-link:hover { text-decoration: underline; }
+    .contact-link { color: white; -webkit-text-stroke: 1px black; text-decoration: none; font-weight: bold; }
+    .contact-link:hover { text-decoration: underline; }
   </style>
 </head>
 
@@ -59,13 +48,25 @@
 
 <section>
   <h2>DIY Electrical Safety Tips</h2>
-  <p><strong>Resetting breakers:</strong> Always turn the breaker fully off before switching it back on.</p>
-  <p><strong>GFCI outlets:</strong> Test monthly using the test and reset buttons.</p>
-  <p><strong>Flickering lights:</strong> Persistent flickering can indicate loose wiring.</p>
+  <div class="tips">
+    <div class="card">
+      <strong>Resetting a Breaker</strong>
+      <p>Always turn the breaker fully off before switching it back on.</p>
+    </div>
+    <div class="card">
+      <strong>GFCI Testing</strong>
+      <p>Test GFCI outlets monthly using the test and reset buttons.</p>
+    </div>
+    <div class="card">
+      <strong>Flickering Lights</strong>
+      <p>Frequent flickering can indicate loose wiring and should be inspected.</p>
+    </div>
+  </div>
 </section>
 
 <footer>
   <p>📞 <a href="tel:3303459389" class="contact-link">(330) 345-9389</a> | ✉️ <a href="mailto:S.henderson@fastcurrentelectric.com" class="contact-link">S.henderson@fastcurrentelectric.com</a></p>
+  <p>&copy; 2025 Fast Current Electric LLC</p>
 </footer>
 
 </body>
