--- a/why-choose-us.html
+++ b/why-choose-us.html
@@ -2,40 +2,28 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Why Choose Fast Current Electric LLC | Akron OH Electrician</title>
-  <meta name="description" content="Learn why homeowners in Akron OH, Wooster OH, Canton OH, Massillon OH, and surrounding areas trust Fast Current Electric LLC for safe and reliable electrical work.">
+  <title>Why Choose Us | Fast Current Electric LLC</title>
+  <meta name="description" content="Learn why homeowners in Akron, OH, Wooster, OH, Canton, OH, and surrounding areas trust Fast Current Electric LLC for safe and reliable electrical services.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" href="images/favicon.png" type="image/png">
 
   <style>
     body { font-family: Arial, sans-serif; margin: 0; color: #222; }
-    .site-header { display: flex; align-items: center; gap: 1.5rem; background-image: url('images/background.png'); background-size: cover; background-position: center; color: #fff; padding: 1.5rem 2rem; }
+    .site-header { display: flex; align-items: center; gap: 1.5rem; background-image: url('images/background.png'); background-size: cover; background-position: center; color: white; padding: 1.5rem 2rem; }
     .logo { max-height: 160px; width: auto; }
-    .site-header h1 { 
-      text-shadow: 
-         3px 3px 0 #000, -3px 3px 0 #000, 
-         3px -3px 0 #000, -3px -3px 0 #000,
-         3px 0 0 #000, 0 3px 0 #000,
-        -3px 0 0 #000, 0 -3px 0 #000;
-    }
-    section h2 { 
-      text-shadow: 
-         2px 2px 0 #000, -2px 2px 0 #000, 
-         2px -2px 0 #000, -2px -2px 0 #000,
-         2px 0 0 #000, 0 2px 0 #000,
-        -2px 0 0 #000, 0 -2px 0 #000;
-      color: #0b3c5d; 
-    }
+    .site-header h1 { -webkit-text-stroke: 2px black; color: white; font-weight: bold; }
+    section h2 { -webkit-text-stroke: 1.5px black; color: white; font-weight: bold; }
     nav { background: #062a40; padding: 0.75rem; text-align: center; }
     nav a { color: #fff; margin: 0 1rem; text-decoration: none; font-weight: bold; }
     nav a:hover { text-decoration: underline; }
     nav a.active { text-decoration: underline; color: #FFD700; }
-    section { padding: 2rem; max-width: 900px; margin: auto; line-height: 1.8; }
+    section { padding: 2rem; max-width: 900px; margin: auto; line-height: 1.6; }
+    .card { border: 1px solid #ddd; padding: 1rem; border-radius: 5px; background: rgba(255,255,255,0.9); margin-bottom: 1rem; }
     footer { background: #f4f4f4; text-align: center; padding: 1rem; font-size: 0.9rem; }
     @media (max-width: 600px) { .site-header { flex-direction: column; text-align: center; } }
-    a.contact-link { color: #222; text-decoration: none; font-weight: bold; }
-    a.contact-link:hover { text-decoration: underline; }
+    .contact-link { color: white; -webkit-text-stroke: 1px black; text-decoration: none; font-weight: bold; }
+    .contact-link:hover { text-decoration: underline; }
   </style>
 </head>
 
@@ -44,7 +32,7 @@
 <header class="site-header">
   <img src="images/FCELLC.jpg" alt="Logo" class="logo">
   <div>
-    <h1>Why Choose Us</h1>
+    <h1>Why Choose Fast Current Electric</h1>
     <p>📞 <a href="tel:3303459389" class="contact-link">(330) 345-9389</a> | ✉️ <a href="mailto:S.henderson@fastcurrentelectric.com" class="contact-link">S.henderson@fastcurrentelectric.com</a></p>
   </div>
 </header>
@@ -58,13 +46,19 @@
 </nav>
 
 <section>
-  <h2>Why Choose Fast Current Electric LLC?</h2>
-  <ul>
-    <li><strong>Experience & Reliability:</strong> Our electricians are licensed and highly trained.</li>
-    <li><strong>Safety First:</strong> Every project is handled with strict safety standards.</li>
-    <li><strong>Customer Education:</strong> We explain what’s safe to DIY and when to call a professional.</li>
-    <li><strong>Prompt Service:</strong> Serving Akron, Wooster, Canton, Massillon, Hartville, Barberton, Copley, Portage Lakes, New Franklin, and Canal Fulton.</li>
-  </ul>
+  <h2>Our Commitment</h2>
+  <div class="card">
+    <strong>Safety First:</strong> We follow strict safety standards to protect you and your home.
+  </div>
+  <div class="card">
+    <strong>Experienced Professionals:</strong> Our team is trained and certified for all types of residential electrical work.
+  </div>
+  <div class="card">
+    <strong>Transparent Pricing:</strong> No surprises—just fair and honest estimates for every job.
+  </div>
+  <div class="card">
+    <strong>Customer Education:</strong> We teach homeowners when it’s safe to DIY and when to call a professional.
+  </div>
 </section>
 
 <footer>
