--- a/index.html
+++ b/index.html
@@ -12,26 +12,45 @@
     body { font-family: Arial, sans-serif; margin: 0; color: #222; }
     .site-header { display: flex; align-items: center; gap: 1.5rem; background-image: url('images/background.png'); background-size: cover; background-position: center; color: white; padding: 1.5rem 2rem; }
     .logo { max-height: 160px; width: auto; }
+
+    /* Main header title with solid outline and bold font */
     .site-header h1 {
-      -webkit-text-stroke: 2px black; /* solid outline */
-      color: white;
-      font-weight: bold;
+        color: white;
+        font-weight: 900;
+        font-family: 'Arial Black', Arial, sans-serif;
+        font-size: 2.8rem;
+        text-shadow:
+            -2px -2px 0 black,
+            2px -2px 0 black,
+            -2px 2px 0 black,
+            2px 2px 0 black;
     }
-    section h2 {
-      -webkit-text-stroke: 1.5px black;
-      color: white;
-      font-weight: bold;
-    }
+
+    section h2 { color: white; font-weight: bold; font-size: 1.8rem; } /* No outline */
+
     nav { background: #062a40; padding: 0.75rem; text-align: center; }
     nav a { color: #fff; margin: 0 1rem; text-decoration: none; font-weight: bold; }
     nav a:hover { text-decoration: underline; }
     nav a.active { text-decoration: underline; color: #FFD700; }
+
     section { padding: 2rem; max-width: 900px; margin: auto; line-height: 1.6; }
     .services, .tips { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 1rem; }
     .card { border: 1px solid #ddd; padding: 1rem; border-radius: 5px; background: rgba(255,255,255,0.9); }
     footer { background: #f4f4f4; text-align: center; padding: 1rem; font-size: 0.9rem; }
+
     @media (max-width: 600px) { .site-header { flex-direction: column; text-align: center; } }
-    .contact-link { color: white; -webkit-text-stroke: 1px black; text-decoration: none; font-weight: bold; }
+
+    /* Contact info links with outline */
+    .contact-link {
+      color: white;
+      text-shadow:
+        -1px -1px 0 black,
+        1px -1px 0 black,
+        -1px 1px 0 black,
+        1px 1px 0 black;
+      text-decoration: none;
+      font-weight: bold;
+    }
     .contact-link:hover { text-decoration: underline; }
   </style>
 </head>
