--- a/services.html
+++ b/services.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Services | Fast Current Electric LLC</title>
-  <meta name="description" content="Fast Current Electric LLC provides outlet replacement, lighting installation, electrical troubleshooting, and safety inspections in Akron, OH and nearby areas.">
+  <meta name="description" content="Fast Current Electric LLC provides electrical services in Akron, OH, Wooster, OH, Canton, OH, Massillon, OH, and nearby areas.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" href="images/favicon.png" type="image/png">
@@ -12,17 +12,43 @@
     body { font-family: Arial, sans-serif; margin: 0; color: #222; }
     .site-header { display: flex; align-items: center; gap: 1.5rem; background-image: url('images/background.png'); background-size: cover; background-position: center; color: white; padding: 1.5rem 2rem; }
     .logo { max-height: 160px; width: auto; }
-    .site-header h1 { -webkit-text-stroke: 2px black; color: white; font-weight: bold; }
-    section h2 { -webkit-text-stroke: 1.5px black; color: white; font-weight: bold; }
+
+    /* Main header h1 outline */
+    .site-header h1 {
+      color: white;
+      font-weight: 900;
+      font-family: 'Arial Black', Arial, sans-serif;
+      font-size: 2.8rem;
+      text-shadow:
+        -2px -2px 0 black,
+        2px -2px 0 black,
+        -2px 2px 0 black,
+        2px 2px 0 black;
+    }
+
+    section h2 { color: white; font-weight: bold; font-size: 1.8rem; } /* No outline */
     nav { background: #062a40; padding: 0.75rem; text-align: center; }
     nav a { color: #fff; margin: 0 1rem; text-decoration: none; font-weight: bold; }
     nav a:hover { text-decoration: underline; }
     nav a.active { text-decoration: underline; color: #FFD700; }
+
     section { padding: 2rem; max-width: 900px; margin: auto; line-height: 1.6; }
     .card { border: 1px solid #ddd; padding: 1rem; border-radius: 5px; background: rgba(255,255,255,0.9); margin-bottom: 1rem; }
     footer { background: #f4f4f4; text-align: center; padding: 1rem; font-size: 0.9rem; }
+
     @media (max-width: 600px) { .site-header { flex-direction: column; text-align: center; } }
-    .contact-link { color: white; -webkit-text-stroke: 1px black; text-decoration: none; font-weight: bold; }
+
+    /* Contact info */
+    .contact-link {
+      color: white;
+      text-shadow:
+        -1px -1px 0 black,
+        1px -1px 0 black,
+        -1px 1px 0 black,
+        1px 1px 0 black;
+      text-decoration: none;
+      font-weight: bold;
+    }
     .contact-link:hover { text-decoration: underline; }
   </style>
 </head>
@@ -32,7 +58,7 @@
 <header class="site-header">
   <img src="images/FCELLC.jpg" alt="Logo" class="logo">
   <div>
-    <h1>Our Services</h1>
+    <h1>Fast Current Electric LLC</h1>
     <p>📞 <a href="tel:3303459389" class="contact-link">(330) 345-9389</a> | ✉️ <a href="mailto:S.henderson@fastcurrentelectric.com" class="contact-link">S.henderson@fastcurrentelectric.com</a></p>
   </div>
 </header>
@@ -46,11 +72,12 @@
 </nav>
 
 <section>
-  <h2>Services We Provide</h2>
-  <div class="card"><strong>Outlet & Switch Replacement:</strong> Repair or replace outlets and switches safely and efficiently.</div>
-  <div class="card"><strong>Lighting & Ceiling Fans:</strong> Install, repair, and upgrade lighting and ceiling fans.</div>
-  <div class="card"><strong>Electrical Troubleshooting:</strong> Identify and fix electrical issues in your home.</div>
-  <div class="card"><strong>Panel & Safety Inspections:</strong> Ensure your electrical panel is up to code and safe.</div>
+  <h2>What We Offer</h2>
+  <div class="card">Outlet & Switch Replacement</div>
+  <div class="card">Lighting & Ceiling Fans</div>
+  <div class="card">Electrical Troubleshooting</div>
+  <div class="card">Panel & Safety Inspections</div>
+  <div class="card">Upgrades & Renovations</div>
 </section>
 
 <footer>
