--- a/why-choose-us.html
+++ b/why-choose-us.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Why Choose Us | Fast Current Electric LLC</title>
-  <meta name="description" content="Learn why homeowners in Akron, OH, Wooster, OH, Canton, OH, and surrounding areas trust Fast Current Electric LLC for safe and reliable electrical services.">
+  <meta name="description" content="Learn why homeowners in Akron, OH, Wooster, OH, Canton, OH, Massillon, OH, and nearby areas trust Fast Current Electric LLC for safe and reliable electrical services.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" href="images/favicon.png" type="image/png">
@@ -12,17 +12,41 @@
     body { font-family: Arial, sans-serif; margin: 0; color: #222; }
     .site-header { display: flex; align-items: center; gap: 1.5rem; background-image: url('images/background.png'); background-size: cover; background-position: center; color: white; padding: 1.5rem 2rem; }
     .logo { max-height: 160px; width: auto; }
-    .site-header h1 { -webkit-text-stroke: 2px black; color: white; font-weight: bold; }
-    section h2 { -webkit-text-stroke: 1.5px black; color: white; font-weight: bold; }
+
+    .site-header h1 {
+        color: white;
+        font-weight: 900;
+        font-family: 'Arial Black', Arial, sans-serif;
+        font-size: 2.8rem;
+        text-shadow:
+            -2px -2px 0 black,
+            2px -2px 0 black,
+            -2px 2px 0 black,
+            2px 2px 0 black;
+    }
+
+    section h2 { color: white; font-weight: bold; font-size: 1.8rem; }
     nav { background: #062a40; padding: 0.75rem; text-align: center; }
     nav a { color: #fff; margin: 0 1rem; text-decoration: none; font-weight: bold; }
     nav a:hover { text-decoration: underline; }
     nav a.active { text-decoration: underline; color: #FFD700; }
+
     section { padding: 2rem; max-width: 900px; margin: auto; line-height: 1.6; }
     .card { border: 1px solid #ddd; padding: 1rem; border-radius: 5px; background: rgba(255,255,255,0.9); margin-bottom: 1rem; }
     footer { background: #f4f4f4; text-align: center; padding: 1rem; font-size: 0.9rem; }
+
     @media (max-width: 600px) { .site-header { flex-direction: column; text-align: center; } }
-    .contact-link { color: white; -webkit-text-stroke: 1px black; text-decoration: none; font-weight: bold; }
+
+    .contact-link {
+      color: white;
+      text-shadow:
+        -1px -1px 0 black,
+        1px -1px 0 black,
+        -1px 1px 0 black,
+        1px 1px 0 black;
+      text-decoration: none;
+      font-weight: bold;
+    }
     .contact-link:hover { text-decoration: underline; }
   </style>
 </head>
@@ -32,7 +56,7 @@
 <header class="site-header">
   <img src="images/FCELLC.jpg" alt="Logo" class="logo">
   <div>
-    <h1>Why Choose Fast Current Electric</h1>
+    <h1>Fast Current Electric LLC</h1>
     <p>📞 <a href="tel:3303459389" class="contact-link">(330) 345-9389</a> | ✉️ <a href="mailto:S.henderson@fastcurrentelectric.com" class="contact-link">S.henderson@fastcurrentelectric.com</a></p>
   </div>
 </header>
@@ -46,18 +70,22 @@
 </nav>
 
 <section>
-  <h2>Our Commitment</h2>
+  <h2>Why Choose Fast Current Electric LLC?</h2>
   <div class="card">
-    <strong>Safety First:</strong> We follow strict safety standards to protect you and your home.
+    <strong>Experience & Expertise</strong>
+    <p>Our certified electricians have years of experience handling residential electrical projects safely and efficiently.</p>
   </div>
   <div class="card">
-    <strong>Experienced Professionals:</strong> Our team is trained and certified for all types of residential electrical work.
+    <strong>Safety First</strong>
+    <p>We prioritize your safety and provide educational tips so homeowners can make informed decisions.</p>
   </div>
   <div class="card">
-    <strong>Transparent Pricing:</strong> No surprises—just fair and honest estimates for every job.
+    <strong>Service Across the Area</strong>
+    <p>Serving Akron, Wooster, Canton, Massillon, Hartville, Barberton, Copley, Portage Lakes, New Franklin, and Canal Fulton.</p>
   </div>
   <div class="card">
-    <strong>Customer Education:</strong> We teach homeowners when it’s safe to DIY and when to call a professional.
+    <strong>Reliable & Trusted</strong>
+    <p>Fast Current Electric LLC is dedicated to professionalism, punctuality, and customer satisfaction.</p>
   </div>
 </section>
 
