--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Contact | Fast Current Electric LLC</title>
-  <meta name="description" content="Contact Fast Current Electric LLC for residential electrical services in Akron, OH, Wooster, OH, Canton, OH, Massillon, OH and surrounding areas.">
+  <meta name="description" content="Contact Fast Current Electric LLC for residential electrical services in Akron, OH, Wooster, OH, Canton, OH, Massillon, OH, and nearby areas.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" href="images/favicon.png" type="image/png">
@@ -12,20 +12,46 @@
     body { font-family: Arial, sans-serif; margin: 0; color: #222; }
     .site-header { display: flex; align-items: center; gap: 1.5rem; background-image: url('images/background.png'); background-size: cover; background-position: center; color: white; padding: 1.5rem 2rem; }
     .logo { max-height: 160px; width: auto; }
-    .site-header h1 { -webkit-text-stroke: 2px black; color: white; font-weight: bold; }
-    section h2 { -webkit-text-stroke: 1.5px black; color: white; font-weight: bold; }
+
+    .site-header h1 {
+        color: white;
+        font-weight: 900;
+        font-family: 'Arial Black', Arial, sans-serif;
+        font-size: 2.8rem;
+        text-shadow:
+            -2px -2px 0 black,
+            2px -2px 0 black,
+            -2px 2px 0 black,
+            2px 2px 0 black;
+    }
+
+    section h2 { color: white; font-weight: bold; font-size: 1.8rem; } 
     nav { background: #062a40; padding: 0.75rem; text-align: center; }
     nav a { color: #fff; margin: 0 1rem; text-decoration: none; font-weight: bold; }
     nav a:hover { text-decoration: underline; }
     nav a.active { text-decoration: underline; color: #FFD700; }
+
     section { padding: 2rem; max-width: 900px; margin: auto; line-height: 1.6; }
-    form { background: rgba(255,255,255,0.9); padding: 1.5rem; border-radius: 5px; }
-    input, textarea { width: 100%; padding: 0.5rem; margin-top: 0.25rem; margin-bottom: 1rem; border: 1px solid #ccc; border-radius: 4px; }
-    button { padding: 0.75rem 1.5rem; background: #0b3c5d; color: white; border: none; border-radius: 4px; font-weight: bold; cursor: pointer; }
-    button:hover { background: #062a40; }
+    form { background: rgba(255,255,255,0.9); padding: 1rem; border-radius: 5px; }
+    form p { margin-bottom: 1rem; }
+    input, textarea { width: 100%; padding: 0.5rem; border: 1px solid #ccc; border-radius: 4px; }
+    button { padding: 0.5rem 1rem; background: #062a40; color: white; border: none; border-radius: 4px; cursor: pointer; }
+    button:hover { background: #0b3c5d; }
+
     footer { background: #f4f4f4; text-align: center; padding: 1rem; font-size: 0.9rem; }
+
     @media (max-width: 600px) { .site-header { flex-direction: column; text-align: center; } }
-    .contact-link { color: white; -webkit-text-stroke: 1px black; text-decoration: none; font-weight: bold; }
+
+    .contact-link {
+      color: white;
+      text-shadow:
+        -1px -1px 0 black,
+        1px -1px 0 black,
+        -1px 1px 0 black,
+        1px 1px 0 black;
+      text-decoration: none;
+      font-weight: bold;
+    }
     .contact-link:hover { text-decoration: underline; }
   </style>
 </head>
@@ -35,7 +61,7 @@
 <header class="site-header">
   <img src="images/FCELLC.jpg" alt="Logo" class="logo">
   <div>
-    <h1>Contact Fast Current Electric</h1>
+    <h1>Fast Current Electric LLC</h1>
     <p>📞 <a href="tel:3303459389" class="contact-link">(330) 345-9389</a> | ✉️ <a href="mailto:S.henderson@fastcurrentelectric.com" class="contact-link">S.henderson@fastcurrentelectric.com</a></p>
   </div>
 </header>
@@ -49,29 +75,26 @@
 </nav>
 
 <section>
-  <h2>Get in Touch</h2>
-  <p>Use the form below to send a message. Non-emergency service requests only.</p>
-
+  <h2>Send a Message</h2>
   <form action="https://formspree.io/f/mojqoboz" method="POST">
-    <label>
-      Name:<br>
-      <input type="text" name="name" required>
-    </label>
-
-    <label>
-      Phone (optional):<br>
-      <input type="tel" name="phone">
-    </label>
-
-    <label>
-      Message:<br>
-      <textarea name="message" rows="4" required></textarea>
-    </label>
-
+    <p>
+      <label>Name<br>
+        <input type="text" name="name" required>
+      </label>
+    </p>
+    <p>
+      <label>Phone (optional)<br>
+        <input type="tel" name="phone">
+      </label>
+    </p>
+    <p>
+      <label>Message<br>
+        <textarea name="message" rows="4" required></textarea>
+      </label>
+    </p>
     <button type="submit">Send Message</button>
   </form>
-
-  <p style="font-size:0.9rem; margin-top:1rem;">For emergencies, call 911.</p>
+  <p style="font-size: 0.9rem;">For emergencies, call 911.</p>
 </section>
 
 <footer>
