--- a/services.html
+++ b/services.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Services | Fast Current Electric LLC</title>
-  <meta name="description" content="Fast Current Electric LLC provides electrical services in Akron, OH, Wooster, OH, Canton, OH, Massillon, OH, and nearby areas.">
+  <meta name="description" content="Fast Current Electric LLC provides residential electrical services including outlet replacement, lighting, ceiling fans, and panel inspections in Akron, OH, Wooster, OH, Canton, OH, Massillon, OH, and nearby areas.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" href="images/favicon.png" type="image/png">
@@ -13,20 +13,19 @@
     .site-header { display: flex; align-items: center; gap: 1.5rem; background-image: url('images/background.png'); background-size: cover; background-position: center; color: white; padding: 1.5rem 2rem; }
     .logo { max-height: 160px; width: auto; }
 
-    /* Main header h1 outline */
     .site-header h1 {
-      color: white;
-      font-weight: 900;
-      font-family: 'Arial Black', Arial, sans-serif;
-      font-size: 2.8rem;
-      text-shadow:
-        -2px -2px 0 black,
-        2px -2px 0 black,
-        -2px 2px 0 black,
-        2px 2px 0 black;
+        color: white;
+        font-weight: 900;
+        font-family: 'Arial Black', Arial, sans-serif;
+        font-size: 2.8rem;
+        text-shadow:
+            -2px -2px 0 black,
+            2px -2px 0 black,
+            -2px 2px 0 black,
+            2px 2px 0 black;
     }
 
-    section h2 { color: white; font-weight: bold; font-size: 1.8rem; } /* No outline */
+    section h2 { color: black; font-weight: bold; font-size: 1.8rem; }
     nav { background: #062a40; padding: 0.75rem; text-align: center; }
     nav a { color: #fff; margin: 0 1rem; text-decoration: none; font-weight: bold; }
     nav a:hover { text-decoration: underline; }
@@ -38,7 +37,6 @@
 
     @media (max-width: 600px) { .site-header { flex-direction: column; text-align: center; } }
 
-    /* Contact info */
     .contact-link {
       color: white;
       text-shadow:
@@ -72,12 +70,11 @@
 </nav>
 
 <section>
-  <h2>What We Offer</h2>
+  <h2>Our Services</h2>
   <div class="card">Outlet & Switch Replacement</div>
   <div class="card">Lighting & Ceiling Fans</div>
   <div class="card">Electrical Troubleshooting</div>
   <div class="card">Panel & Safety Inspections</div>
-  <div class="card">Upgrades & Renovations</div>
 </section>
 
 <footer>
