--- a/tips.html
+++ b/tips.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Safety Tips | Fast Current Electric LLC</title>
-  <meta name="description" content="DIY electrical safety tips from Fast Current Electric LLC for homeowners in Akron, OH, Wooster, OH, Canton, OH, and surrounding areas.">
+  <title>DIY Electrical Safety Tips | Fast Current Electric LLC</title>
+  <meta name="description" content="Fast Current Electric LLC offers DIY electrical safety tips and advice for homeowners in Akron, OH, Wooster, OH, Canton, OH, Massillon, OH, and surrounding areas.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" href="images/favicon.png" type="image/png">
@@ -14,18 +14,18 @@
     .logo { max-height: 160px; width: auto; }
 
     .site-header h1 {
-      color: white;
-      font-weight: 900;
-      font-family: 'Arial Black', Arial, sans-serif;
-      font-size: 2.8rem;
-      text-shadow:
-        -2px -2px 0 black,
-        2px -2px 0 black,
-        -2px 2px 0 black,
-        2px 2px 0 black;
+        color: white;
+        font-weight: 900;
+        font-family: 'Arial Black', Arial, sans-serif;
+        font-size: 2.8rem;
+        text-shadow:
+            -2px -2px 0 black,
+            2px -2px 0 black,
+            -2px 2px 0 black,
+            2px 2px 0 black;
     }
 
-    section h2 { color: white; font-weight: bold; font-size: 1.8rem; } 
+    section h2 { color: black; font-weight: bold; font-size: 1.8rem; }
     nav { background: #062a40; padding: 0.75rem; text-align: center; }
     nav a { color: #fff; margin: 0 1rem; text-decoration: none; font-weight: bold; }
     nav a:hover { text-decoration: underline; }
@@ -33,8 +33,7 @@
 
     section { padding: 2rem; max-width: 900px; margin: auto; line-height: 1.6; }
     .tips { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 1rem; }
-    .card { border: 1px solid #ddd; padding: 1rem; border-radius: 5px; background: rgba(255,255,255,0.9); }
-
+    .card { border: 1px solid #ddd; padding: 1rem; border-radius: 5px; background: rgba(255,255,255,0.9); margin-bottom: 1rem; }
     footer { background: #f4f4f4; text-align: center; padding: 1rem; font-size: 0.9rem; }
 
     @media (max-width: 600px) { .site-header { flex-direction: column; text-align: center; } }
@@ -74,9 +73,18 @@
 <section>
   <h2>DIY Electrical Safety Tips</h2>
   <div class="tips">
-    <div class="card"><strong>Resetting a Breaker</strong><p>Always turn the breaker fully off before switching it back on.</p></div>
-    <div class="card"><strong>GFCI Testing</strong><p>Test GFCI outlets monthly using the test and reset buttons.</p></div>
-    <div class="card"><strong>Flickering Lights</strong><p>Frequent flickering can indicate loose wiring and should be inspected.</p></div>
+    <div class="card">
+      <strong>Resetting a Breaker</strong>
+      <p>Always turn the breaker fully off before switching it back on.</p>
+    </div>
+    <div class="card">
+      <strong>GFCI Testing</strong>
+      <p>Test GFCI outlets monthly using the test and reset buttons.</p>
+    </div>
+    <div class="card">
+      <strong>Flickering Lights</strong>
+      <p>Frequent flickering can indicate loose wiring and should be inspected.</p>
+    </div>
   </div>
 </section>
 
