--- a/why-choose-us.html
+++ b/why-choose-us.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Why Choose Us | Fast Current Electric LLC</title>
-  <meta name="description" content="Learn why homeowners in Akron, OH, Wooster, OH, Canton, OH, Massillon, OH, and nearby areas trust Fast Current Electric LLC for safe and reliable electrical services.">
+  <meta name="description" content="Discover why Fast Current Electric LLC is the trusted electrical service provider in Akron, OH, Wooster, OH, Canton, OH, Massillon, OH, and surrounding areas.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" href="images/favicon.png" type="image/png">
@@ -25,7 +25,7 @@
             2px 2px 0 black;
     }
 
-    section h2 { color: white; font-weight: bold; font-size: 1.8rem; }
+    section h2 { color: black; font-weight: bold; font-size: 1.8rem; }
     nav { background: #062a40; padding: 0.75rem; text-align: center; }
     nav a { color: #fff; margin: 0 1rem; text-decoration: none; font-weight: bold; }
     nav a:hover { text-decoration: underline; }
@@ -73,19 +73,15 @@
   <h2>Why Choose Fast Current Electric LLC?</h2>
   <div class="card">
     <strong>Experience & Expertise</strong>
-    <p>Our certified electricians have years of experience handling residential electrical projects safely and efficiently.</p>
+    <p>Our licensed electricians have years of experience handling residential electrical needs safely and efficiently.</p>
+  </div>
+  <div class="card">
+    <strong>Customer Satisfaction</strong>
+    <p>We pride ourselves on professional service and clear communication, ensuring our clients are always informed and satisfied.</p>
   </div>
   <div class="card">
     <strong>Safety First</strong>
-    <p>We prioritize your safety and provide educational tips so homeowners can make informed decisions.</p>
-  </div>
-  <div class="card">
-    <strong>Service Across the Area</strong>
-    <p>Serving Akron, Wooster, Canton, Massillon, Hartville, Barberton, Copley, Portage Lakes, New Franklin, and Canal Fulton.</p>
-  </div>
-  <div class="card">
-    <strong>Reliable & Trusted</strong>
-    <p>Fast Current Electric LLC is dedicated to professionalism, punctuality, and customer satisfaction.</p>
+    <p>We provide education and safe practices for homeowners, ensuring electrical work is done correctly and securely.</p>
   </div>
 </section>
 
