--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Fast Current Electric LLC</title>
-  <meta name="description" content="Fast Current Electric LLC provides residential electrical services and safety tips for Akron, OH, Wooster, OH, Canton, OH, Massillon, OH, and nearby areas.">
+  <title>Home | Fast Current Electric LLC</title>
+  <meta name="description" content="Fast Current Electric LLC offers residential electrical services and safety tips for Akron, OH, Wooster, OH, Canton, OH, Massillon, OH, and surrounding areas.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <link rel="icon" href="images/favicon.png" type="image/png">
 
   <style>
@@ -38,16 +37,7 @@
 
     @media (max-width: 600px) { .site-header { flex-direction: column; text-align: center; } }
 
-    .contact-link {
-      color: white;
-      text-shadow:
-        -1px -1px 0 black,
-        1px -1px 0 black,
-        -1px 1px 0 black,
-        1px 1px 0 black;
-      text-decoration: none;
-      font-weight: bold;
-    }
+    .contact-link { color: black; text-decoration: none; font-weight: bold; }
     .contact-link:hover { text-decoration: underline; }
   </style>
 </head>
@@ -56,10 +46,7 @@
 
 <header class="site-header">
   <img src="images/FCELLC.jpg" alt="Logo" class="logo">
-  <div>
-    <h1>Fast Current Electric LLC</h1>
-    <p>📞 <a href="tel:3303459389" class="contact-link">(330) 345-9389</a> | ✉️ <a href="mailto:S.henderson@fastcurrentelectric.com" class="contact-link">S.henderson@fastcurrentelectric.com</a></p>
-  </div>
+  <h1>Home</h1>
 </header>
 
 <nav>
@@ -71,77 +58,8 @@
 </nav>
 
 <section>
-  <h2>Our Services</h2>
-  <div class="services">
-    <div class="card">Outlet & Switch Replacement</div>
-    <div class="card">Lighting & Ceiling Fans</div>
-    <div class="card">Electrical Troubleshooting</div>
-    <div class="card">Panel & Safety Inspections</div>
-  </div>
-</section>
-
-<section>
-  <h2>DIY Electrical Safety Tips</h2>
-  <div class="tips">
-    <div class="card">
-      <strong>Resetting a Breaker</strong>
-      <p>Always turn the breaker fully off before switching it back on.</p>
-    </div>
-    <div class="card">
-      <strong>GFCI Testing</strong>
-      <p>Test GFCI outlets monthly using the test and reset buttons.</p>
-    </div>
-    <div class="card">
-      <strong>Flickering Lights</strong>
-      <p>Frequent flickering can indicate loose wiring and should be inspected.</p>
-    </div>
-  </div>
-</section>
-
-<section>
-  <h2>Why Choose Fast Current Electric</h2>
-  <p>
-    We focus on safety, reliability, and education. Our goal is to help
-    homeowners understand when a project is safe to handle and when it is
-    best to call a professional.
-  </p>
-</section>
-
-<section>
-  <h2>Support & Contact</h2>
-  <p>
-    Use the form below to send a message to Fast Current Electric LLC.
-    This form is for non-emergency questions and service requests.
-  </p>
-
-  <form action="https://formspree.io/f/mojqoboz" method="POST">
-    <p>
-      <label>
-        Name<br>
-        <input type="text" name="name" required>
-      </label>
-    </p>
-
-    <p>
-      <label>
-        Phone (optional)<br>
-        <input type="tel" name="phone">
-      </label>
-    </p>
-
-    <p>
-      <label>
-        Message<br>
-        <textarea name="message" rows="4" required></textarea>
-      </label>
-    </p>
-
-    <button type="submit">Send Message</button>
-  </form>
-
-  <p style="font-size: 0.9rem;">
-    For emergencies, call 911.
-  </p>
+  <h2>Welcome to Fast Current Electric LLC</h2>
+  <p>We provide residential electrical services and safety education for homeowners in Akron, OH, Wooster, OH, Canton, OH, Massillon, OH, and surrounding areas.</p>
 </section>
 
 <footer>
