--- a/tips.html
+++ b/tips.html
@@ -3,9 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>DIY Electrical Safety Tips | Fast Current Electric LLC</title>
-  <meta name="description" content="Fast Current Electric LLC offers DIY electrical safety tips and advice for homeowners in Akron, OH, Wooster, OH, Canton, OH, Massillon, OH, and surrounding areas.">
+  <meta name="description" content="Learn safe electrical practices for your home with DIY tips from Fast Current Electric LLC serving Akron, OH, Wooster, OH, Canton, OH, Massillon, OH, and nearby areas.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <link rel="icon" href="images/favicon.png" type="image/png">
 
   <style>
@@ -38,16 +37,7 @@
 
     @media (max-width: 600px) { .site-header { flex-direction: column; text-align: center; } }
 
-    .contact-link {
-      color: white;
-      text-shadow:
-        -1px -1px 0 black,
-        1px -1px 0 black,
-        -1px 1px 0 black,
-        1px 1px 0 black;
-      text-decoration: none;
-      font-weight: bold;
-    }
+    .contact-link { color: black; text-decoration: none; font-weight: bold; }
     .contact-link:hover { text-decoration: underline; }
   </style>
 </head>
@@ -56,10 +46,7 @@
 
 <header class="site-header">
   <img src="images/FCELLC.jpg" alt="Logo" class="logo">
-  <div>
-    <h1>Fast Current Electric LLC</h1>
-    <p>📞 <a href="tel:3303459389" class="contact-link">(330) 345-9389</a> | ✉️ <a href="mailto:S.henderson@fastcurrentelectric.com" class="contact-link">S.henderson@fastcurrentelectric.com</a></p>
-  </div>
+  <h1>DIY Electrical Safety Tips</h1>
 </header>
 
 <nav>
