--- a/why-choose-us.html
+++ b/why-choose-us.html
@@ -5,7 +5,6 @@
   <title>Why Choose Us | Fast Current Electric LLC</title>
   <meta name="description" content="Discover why Fast Current Electric LLC is the trusted electrical service provider in Akron, OH, Wooster, OH, Canton, OH, Massillon, OH, and surrounding areas.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <link rel="icon" href="images/favicon.png" type="image/png">
 
   <style>
@@ -37,16 +36,7 @@
 
     @media (max-width: 600px) { .site-header { flex-direction: column; text-align: center; } }
 
-    .contact-link {
-      color: white;
-      text-shadow:
-        -1px -1px 0 black,
-        1px -1px 0 black,
-        -1px 1px 0 black,
-        1px 1px 0 black;
-      text-decoration: none;
-      font-weight: bold;
-    }
+    .contact-link { color: black; text-decoration: none; font-weight: bold; }
     .contact-link:hover { text-decoration: underline; }
   </style>
 </head>
@@ -55,10 +45,7 @@
 
 <header class="site-header">
   <img src="images/FCELLC.jpg" alt="Logo" class="logo">
-  <div>
-    <h1>Fast Current Electric LLC</h1>
-    <p>📞 <a href="tel:3303459389" class="contact-link">(330) 345-9389</a> | ✉️ <a href="mailto:S.henderson@fastcurrentelectric.com" class="contact-link">S.henderson@fastcurrentelectric.com</a></p>
-  </div>
+  <h1>Why Choose Us</h1>
 </header>
 
 <nav>
