--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Home | Fast Current Electric LLC</title>
-  <meta name="description" content="Fast Current Electric LLC offers residential electrical services and safety tips for Akron, OH, Wooster, OH, Canton, OH, Massillon, OH, and surrounding areas.">
+  <meta name="description" content="Fast Current Electric LLC provides residential electrical services and safety guidance in Akron, OH, Wooster, OH, Canton, OH, Massillon, OH, and surrounding areas.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="images/favicon.png" type="image/png">
 
@@ -24,15 +24,12 @@
             2px 2px 0 black;
     }
 
-    section h2 { color: black; font-weight: bold; font-size: 1.8rem; }
     nav { background: #062a40; padding: 0.75rem; text-align: center; }
     nav a { color: #fff; margin: 0 1rem; text-decoration: none; font-weight: bold; }
     nav a:hover { text-decoration: underline; }
     nav a.active { text-decoration: underline; color: #FFD700; }
 
     section { padding: 2rem; max-width: 900px; margin: auto; line-height: 1.6; }
-    .services, .tips { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 1rem; }
-    .card { border: 1px solid #ddd; padding: 1rem; border-radius: 5px; background: rgba(255,255,255,0.9); margin-bottom: 1rem; }
     footer { background: #f4f4f4; text-align: center; padding: 1rem; font-size: 0.9rem; }
 
     @media (max-width: 600px) { .site-header { flex-direction: column; text-align: center; } }
@@ -59,7 +56,7 @@
 
 <section>
   <h2>Welcome to Fast Current Electric LLC</h2>
-  <p>We provide residential electrical services and safety education for homeowners in Akron, OH, Wooster, OH, Canton, OH, Massillon, OH, and surrounding areas.</p>
+  <p>Fast Current Electric LLC provides trusted residential electrical services in Akron, OH, Wooster, OH, Canton, OH, Massillon, OH, and surrounding areas. We are committed to safety, reliability, and helping homeowners know when to handle a project themselves or call a professional.</p>
 </section>
 
 <footer>
