--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <link rel="icon" href="images/favicon.png" type="image/png">
 
   <style>
-    body { font-family: Arial, sans-serif; margin: 0; color: #222; }
-    .site-header { display: flex; align-items: center; gap: 1.5rem; background-image: url('images/background.png'); background-size: cover; background-position: center; color: white; padding: 1.5rem 2rem; }
-    .logo { max-height: 160px; width: auto; }
+    body { font-family: Arial, sans-serif; margin: 0; color: #222; text-align: center; }
+    .site-header { display: flex; flex-direction: column; align-items: center; background-image: url('images/background.png'); background-size: cover; background-position: center; color: white; padding: 1.5rem 2rem; }
+    .logo { max-height: 160px; width: auto; margin-bottom: 1rem; }
 
     .site-header h1 {
         color: white;
@@ -22,17 +22,18 @@
             2px -2px 0 black,
             -2px 2px 0 black,
             2px 2px 0 black;
+        margin: 0;
     }
 
-    nav { background: #062a40; padding: 0.75rem; text-align: center; }
+    nav { background: #062a40; padding: 0.75rem; }
     nav a { color: #fff; margin: 0 1rem; text-decoration: none; font-weight: bold; }
     nav a:hover { text-decoration: underline; }
     nav a.active { text-decoration: underline; color: #FFD700; }
 
     section { padding: 2rem; max-width: 900px; margin: auto; line-height: 1.6; }
-    footer { background: #f4f4f4; text-align: center; padding: 1rem; font-size: 0.9rem; }
+    section h2 { color: black; font-weight: bold; font-size: 1.8rem; margin-bottom: 1rem; }
 
-    @media (max-width: 600px) { .site-header { flex-direction: column; text-align: center; } }
+    footer { background: #f4f4f4; text-align: center; padding: 1rem; font-size: 0.9rem; }
 
     .contact-link { color: black; text-decoration: none; font-weight: bold; }
     .contact-link:hover { text-decoration: underline; }
