--- a/tips.html
+++ b/tips.html
@@ -2,15 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>DIY Electrical Safety Tips | Fast Current Electric LLC</title>
-  <meta name="description" content="Learn safe electrical practices for your home with DIY tips from Fast Current Electric LLC serving Akron, OH, Wooster, OH, Canton, OH, Massillon, OH, and nearby areas.">
+  <title>Safety Tips | Fast Current Electric LLC</title>
+  <meta name="description" content="Learn helpful DIY electrical safety tips from Fast Current Electric LLC for residents in Akron, OH, Wooster, OH, Canton, OH, Massillon, OH, and nearby areas.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="images/favicon.png" type="image/png">
 
   <style>
-    body { font-family: Arial, sans-serif; margin: 0; color: #222; }
-    .site-header { display: flex; align-items: center; gap: 1.5rem; background-image: url('images/background.png'); background-size: cover; background-position: center; color: white; padding: 1.5rem 2rem; }
-    .logo { max-height: 160px; width: auto; }
+    body { font-family: Arial, sans-serif; margin: 0; color: #222; text-align: center; }
+    .site-header { display: flex; flex-direction: column; align-items: center; background-image: url('images/background.png'); background-size: cover; background-position: center; color: white; padding: 1.5rem 2rem; }
+    .logo { max-height: 160px; width: auto; margin-bottom: 1rem; }
 
     .site-header h1 {
         color: white;
@@ -22,21 +22,21 @@
             2px -2px 0 black,
             -2px 2px 0 black,
             2px 2px 0 black;
+        margin: 0;
     }
 
-    section h2 { color: black; font-weight: bold; font-size: 1.8rem; }
-    nav { background: #062a40; padding: 0.75rem; text-align: center; }
+    nav { background: #062a40; padding: 0.75rem; }
     nav a { color: #fff; margin: 0 1rem; text-decoration: none; font-weight: bold; }
     nav a:hover { text-decoration: underline; }
     nav a.active { text-decoration: underline; color: #FFD700; }
 
     section { padding: 2rem; max-width: 900px; margin: auto; line-height: 1.6; }
+    section h2 { color: black; font-weight: bold; font-size: 1.8rem; margin-bottom: 1rem; }
+
     .tips { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 1rem; }
-    .card { border: 1px solid #ddd; padding: 1rem; border-radius: 5px; background: rgba(255,255,255,0.9); margin-bottom: 1rem; }
+    .card { border: 1px solid #ddd; padding: 1rem; border-radius: 5px; background: rgba(255,255,255,0.9); }
+
     footer { background: #f4f4f4; text-align: center; padding: 1rem; font-size: 0.9rem; }
-
-    @media (max-width: 600px) { .site-header { flex-direction: column; text-align: center; } }
-
     .contact-link { color: black; text-decoration: none; font-weight: bold; }
     .contact-link:hover { text-decoration: underline; }
   </style>
@@ -46,7 +46,7 @@
 
 <header class="site-header">
   <img src="images/FCELLC.jpg" alt="Logo" class="logo">
-  <h1>DIY Electrical Safety Tips</h1>
+  <h1>Safety Tips</h1>
 </header>
 
 <nav>
