--- a/why-choose-us.html
+++ b/why-choose-us.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <title>Why Choose Us | Fast Current Electric LLC</title>
-  <meta name="description" content="Discover why Fast Current Electric LLC is the trusted electrical service provider in Akron, OH, Wooster, OH, Canton, OH, Massillon, OH, and surrounding areas.">
+  <meta name="description" content="Learn why Fast Current Electric LLC is trusted for residential electrical services in Akron, OH, Wooster, OH, Canton, OH, Massillon, OH, and nearby areas.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="images/favicon.png" type="image/png">
 
   <style>
-    body { font-family: Arial, sans-serif; margin: 0; color: #222; }
-    .site-header { display: flex; align-items: center; gap: 1.5rem; background-image: url('images/background.png'); background-size: cover; background-position: center; color: white; padding: 1.5rem 2rem; }
-    .logo { max-height: 160px; width: auto; }
+    body { font-family: Arial, sans-serif; margin: 0; color: #222; text-align: center; }
+    .site-header { display: flex; flex-direction: column; align-items: center; background-image: url('images/background.png'); background-size: cover; background-position: center; color: white; padding: 1.5rem 2rem; }
+    .logo { max-height: 160px; width: auto; margin-bottom: 1rem; }
 
     .site-header h1 {
         color: white;
@@ -22,20 +22,18 @@
             2px -2px 0 black,
             -2px 2px 0 black,
             2px 2px 0 black;
+        margin: 0;
     }
 
-    section h2 { color: black; font-weight: bold; font-size: 1.8rem; }
-    nav { background: #062a40; padding: 0.75rem; text-align: center; }
+    nav { background: #062a40; padding: 0.75rem; }
     nav a { color: #fff; margin: 0 1rem; text-decoration: none; font-weight: bold; }
     nav a:hover { text-decoration: underline; }
     nav a.active { text-decoration: underline; color: #FFD700; }
 
     section { padding: 2rem; max-width: 900px; margin: auto; line-height: 1.6; }
-    .card { border: 1px solid #ddd; padding: 1rem; border-radius: 5px; background: rgba(255,255,255,0.9); margin-bottom: 1rem; }
+    section h2 { color: black; font-weight: bold; font-size: 1.8rem; margin-bottom: 1rem; }
+
     footer { background: #f4f4f4; text-align: center; padding: 1rem; font-size: 0.9rem; }
-
-    @media (max-width: 600px) { .site-header { flex-direction: column; text-align: center; } }
-
     .contact-link { color: black; text-decoration: none; font-weight: bold; }
     .contact-link:hover { text-decoration: underline; }
   </style>
@@ -58,18 +56,7 @@
 
 <section>
   <h2>Why Choose Fast Current Electric LLC?</h2>
-  <div class="card">
-    <strong>Experience & Expertise</strong>
-    <p>Our licensed electricians have years of experience handling residential electrical needs safely and efficiently.</p>
-  </div>
-  <div class="card">
-    <strong>Customer Satisfaction</strong>
-    <p>We pride ourselves on professional service and clear communication, ensuring our clients are always informed and satisfied.</p>
-  </div>
-  <div class="card">
-    <strong>Safety First</strong>
-    <p>We provide education and safe practices for homeowners, ensuring electrical work is done correctly and securely.</p>
-  </div>
+  <p>We focus on safety, reliability, and education. Our goal is to help homeowners understand when a project is safe to handle and when it is best to call a professional. Serving Akron, OH, Wooster, OH, Canton, OH, Massillon, OH, and surrounding areas, we pride ourselves on responsive service and trusted expertise.</p>
 </section>
 
 <footer>
